Maybe I'm overthinking it. Revert the spacing stuff from last commit and add an extra div to fix the grid layout.

--- a/assets/style.css
+++ b/assets/style.css
@@ -27,13 +27,8 @@ body > footer {
 }
 
 .bigtitle {
-    margin: auto;
     --pico-font-size: 3rem;
     --pico-font-family: "Oleo Script", system-ui;
     --pico-font-weight: 700;
     font-style: normal;
-}
-
-.icon {
-    float: left;
 }
